Fix: Hide overflow on app and main as the page should have a scrollable area

--- a/framework/PageFramework.css
+++ b/framework/PageFramework.css
@@ -1,5 +1,6 @@
 #app {
   min-block-size: 100dvh;
+  overflow: hidden;
 }
 
 .border-top {
@@ -53,3 +54,7 @@
 .pf-v5-c-page__sidebar-body {
   padding-top: 0;
 } */
+
+.pf-v5-c-page__main {
+  overflow: hidden;
+}
